--- a/about/index.html
+++ b/about/index.html
@@ -13,9 +13,9 @@
 
 <meta property="og:type" content="website">
 <meta property="og:title" content="About Sadra Amlashi">
-<meta property="og:url" content="https://sadra.github.io/english//about/">
+<meta property="og:url" content="https://sadra.github.io/english/about/">
 
-    <meta property="og:image" content="https://sadra.github.io/english//assets/img/avatar.jpg" />
+<meta property="og:image" content="https://sadra.github.io/english/assets/img/avatar.jpg" />
 
 <meta property="og:site_name" content="Sadra Isapanah Amlashi">
 <meta property="og:description" content="Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
