--- a/about/index.html
+++ b/about/index.html
@@ -27,8 +27,8 @@
 ">
 
 <link rel="alternative" href="/site-map.xml" title="Sadra Isapanah Amlashi" type="application/atom+xml">
-<link rel="short icon" type="image/x-icon" href="/assets/img/base/favicon.png">
-<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+<link rel="short icon" type="image/x-icon" href="https://sadra.github.io/english/assets/img/base/favicon.png">
+<link rel="stylesheet" type="text/css" href="https://sadra.github.io/english/assets/css/styles.css">
 
     </head>
 
@@ -67,7 +67,7 @@
 
     <div class="delimiter">
         <a href="/" class="footer-logo">
-            <img src="/assets/img/base/favicon.png" class="logo-wrapper">
+            <img src="https://sadra.github.io/english/assets/img/base/favicon.png" class="logo-wrapper">
         </a>
     </div>
 
@@ -88,10 +88,10 @@
 
  </footer>
 <!-- /Footer -->
-        <script  type="application/javascript" src="/assets/js/jquery-3.2.1.min.js"></script>
-<script  type="application/javascript" src="/assets/js/function.js"></script>
-<script  type="application/javascript" src="/assets/js/html2canvas.min.js"></script>
-<script  type="application/javascript" src="/assets/js/canvas2image.js"></script>
+        <script  type="application/javascript" src="https://sadra.github.io/english/assets/js/jquery-3.2.1.min.js"></script>
+<script  type="application/javascript" src="https://sadra.github.io/english/assets/js/function.js"></script>
+<script  type="application/javascript" src="https://sadra.github.io/english/assets/js/html2canvas.min.js"></script>
+<script  type="application/javascript" src="https://sadra.github.io/english/assets/js/canvas2image.js"></script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5952bba56b75766c"></script>
     </body>
 </html>
