Fix base url bug

--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@ title: 404 Not Found
             </div>
 
             <div class="err404-movie-container">
-                <p>If you want the page, just search it again. You know how to search, don't you, baby? Click on back, and return to my heart. <a href="/">Back</a></p>
+                <p>If you want the page, just search it again. You know how to search, don't you, baby? Click on back, and return to my heart. <a href="{{ site.url }}">Back</a></p>
             </div>
 
             <div  id="playBtn"></div>
