--- a/about/index.html
+++ b/about/index.html
@@ -36,12 +36,12 @@
         <!-- Header -->
 <header class="header-container">
     <nav class="nav-wrap">
-        <a href="/" class="nav-logo">Sadra Isapanah Amlashi</a>
+        <a href="https://sadra.github.io/english" class="nav-logo">Sadra Isapanah Amlashi</a>
         <ul class="navigation">
 
-            <li><a href="/lists/categories">Categories</a></li>
-            <li><a href="/lists/tags">Tags</a></li>
-            <li><a href="/about/">About</a></li>
+            <li><a href="https://sadra.github.io/english/lists/categories">Categories</a></li>
+            <li><a href="https://sadra.github.io/english/lists/tags">Tags</a></li>
+            <li><a href="https://sadra.github.io/english/about/">About</a></li>
             <li><a href="https://sadra.github.io/">فارسی</a></li>
 
         </ul>
