--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@
 
 <meta property="og:type" content="website">
 <meta property="og:title" content="404 Not Found">
-<meta property="og:url" content="english/404.html">
+<meta property="og:url" content="/404.html">
 
-<meta property="og:image" content="english/assets/img/avatar.jpg" />
+<meta property="og:image" content="/assets/img/avatar.jpg" />
 
 <meta property="og:site_name" content="Sadra Isapanah Amlashi">
 <meta property="og:description" content="Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
@@ -23,8 +23,8 @@
 ">
 
 <link rel="alternative" href="/site-map.xml" title="Sadra Isapanah Amlashi" type="application/atom+xml">
-<link rel="short icon" type="image/x-icon" href="english/assets/img/base/favicon.png">
-<link rel="stylesheet" type="text/css" href="english/assets/css/styles.css">
+<link rel="short icon" type="image/x-icon" href="/assets/img/base/favicon.png">
+<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
 
 
     <style>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="err404-movie-container">
-                <p>If you want the page, just search it again. You know how to search, don't you, baby? Click on back, and return to my heart. <a href="english">Back</a></p>
+                <p>If you want the page, just search it again. You know how to search, don't you, baby? Click on back, and return to my heart. <a href="">Back</a></p>
             </div>
 
             <div  id="playBtn"></div>
@@ -110,10 +110,10 @@
 
     </script>
 
-<script  type="application/javascript" src="english/assets/js/jquery-3.2.1.min.js"></script>
-<script  type="application/javascript" src="english/assets/js/function.js"></script>
-<script  type="application/javascript" src="english/assets/js/html2canvas.min.js"></script>
-<script  type="application/javascript" src="english/assets/js/canvas2image.js"></script>
+<script  type="application/javascript" src="/assets/js/jquery-3.2.1.min.js"></script>
+<script  type="application/javascript" src="/assets/js/function.js"></script>
+<script  type="application/javascript" src="/assets/js/html2canvas.min.js"></script>
+<script  type="application/javascript" src="/assets/js/canvas2image.js"></script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5952bba56b75766c"></script>
 </body>
 </html>
