--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <meta property="og:type" content="website">
 <meta property="og:title" content="About Sadra Amlashi">
-<meta property="og:url" content="http://isapanah.com/english//about/">
+<meta property="og:url" content="http://isapanah.com/english//about">
 
 <meta property="og:image" content="http://isapanah.com/english//assets/img/avatar.jpg" />
 
