--- a/list/items.html
+++ b/list/items.html
@@ -13,7 +13,7 @@
 
 <meta property="og:type" content="website">
 <meta property="og:title" content="Categories">
-<meta property="og:url" content="http://isapanah.com/english//list/items/">
+<meta property="og:url" content="http://isapanah.com/english//list/items">
 
 <meta property="og:image" content="http://isapanah.com/english//assets/img/avatar.jpg" />
 
