--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
 <meta content="IE-edge,chrome=1" http-equiv="X-UA-Compatable">
-<meta name="description" content="Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
+<meta name="description" content="My name is Sadra. I’m an iOS & Android App Developer.
 ">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,9 +21,9 @@
 
 
 <title>Sadra Amlashi | 404 Not Found</title>
-<meta property="og:title" content="Sadra Amlashi | 404 Not Found">
-<meta property="og:site_name" content="Sadra Amlashi | 404 Not Found">
-<meta property="twitter:title" content="Sadra Amlashi | 404 Not Found">
+<meta property="og:title" content="404 Not Found | Sadra Amlashi">
+<meta property="og:site_name" content="404 Not Found | Sadra Amlashi">
+<meta property="twitter:title" content="404 Not Found | Sadra Amlashi">
 
 
 
@@ -33,9 +33,9 @@
 
 
 <meta property="og:url" content="http://isapanah.com/english/404.html">
-<meta property="og:description" content="Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
+<meta property="og:description" content="My name is Sadra. I’m an iOS & Android App Developer.
 ">
-<meta name="twitter:description" content="Howdy! My name is Sadra Isapanah Amlashi. I’m an Android and iOS App Developer.
+<meta name="twitter:description" content="My name is Sadra. I’m an iOS & Android App Developer.
 ">
 
 
