--- a/about.html
+++ b/about.html
@@ -72,9 +72,18 @@
 
     <div class="blog-post-container" align="center">
 
-        <h1 dir="ltr">Coming soon .. ;)</h1>
-        <br/>
-        <img src="/assets/img/base/bugart-bacall-waiting.jpg" align="Bugart & Bacall Waiting" style=" max-width: 400px; width: inherit; height: initial; margin: 10px;"/>
+        <h1>درباره من</h1>
+
+        <img src="assets/img/base/about-cover-new.jpg" width="95%"/>
+
+        <p>I’m Rahmatollah Isapanah <a href="https://en.wikipedia.org/wiki/Amlash">Amlashi</a>, but every body calls me Sadra.</p>
+        <p>I was born in Amlash at 1991/3/21. I’m living in Gorgan, about 20 years. I have educated Bachelor in Telecommunications engineering at IAUAK University. Because of my skills and job positions, I’ve decided to educate Master of&nbsp;in e-Commerce at IAUEC.</p>
+        <p>I started Blogging in 2005 after I bought my first computer. After a while, I moved working on social networks and I had some pages on Facebook, at the same time I was busy with working on <a href="https://www.google.com/adsense">Google Adsense</a>.</p>
+        <p>Before 2015, I was just a mobile application developer freelancer. From 2015 till now, I am Senior iOS and Android developer at ParsFibernet. During this time we made some awesome app like Android/iOS FIbernet App, Android/iOS Foodnet App.</p>
+        <p>I started programming in 2003 using PHP and then moved on to Android and started a career coding Android mobile applications. I then got interested in Apple products and that helped shape my future in Mobile application development. Recently I improved my skill in Javascript and I’ve been interested in exploring Python, Go &amp; Ruby as a hobby.</p>
+        <p>Maybe you were interested to know, I use <a href="https://nodejs.org/">Node.Js</a> for Backend, <a href="https://reactjs.net/">ReactJs</a> for Frontend and <a href="https://www.docker.com/">Docker</a> for controlling web application in my personal project.</p>
+        <p>You can access to my open source projects from my <a href="https://github.com/sadra">Github</a>.</p>
+        <p>Or you can follow me on <a href="https://twitter.com/sadra_amlashi">Twitter</a>, <a href="https://instagram.com/instsadra">Instagram</a> and contact me with <a href="mailto:amlashi.sadra@gmail.com">Email</a>.</p>
 
     </div>
 
