--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
 
     <div class="blog-post-container" align="center">
 
-        <h1>درباره من</h1>
+        <h1>About me.</h1>
 
         <img src="assets/img/base/about-cover-new.jpg" width="95%"/>
 
