--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
             <li><a href="http://isapanah.com/english/">Articles</a></li>
             <li><a href="http://isapanah.com/english/list/items">Categories</a></li>
-            <li><a href="http://isapanah.com/english/about/">About</a></li>
+            <li><a href="http://isapanah.com/english/about">About</a></li>
             <li><a href="http://cv.isapanah.com/">C.V</a></li>
             <li><a href="https://sadra.github.io/">فارسی</a></li>
 
@@ -72,7 +72,7 @@
 
     <div class="blog-post-container" align="center">
 
-        <h1>درباره من</h1>
+        <h1>About me.</h1>
 
         <img src="assets/img/base/about-cover-new.jpg" width="95%"/>
 
