--- a/about.html
+++ b/about.html
@@ -70,11 +70,11 @@
 
         <div class="content">
 
-    <div class="blog-post-container" align="center">
+    <div class="blog-post-container">
 
         <h1>About me.</h1>
 
-        <img src="assets/img/base/about-cover-new.jpg" width="95%"/>
+        <img src="assets/img/base/about-cover-new.jpg" width="95%" align="center"/>
 
         <p>I’m Rahmatollah Isapanah <a href="https://en.wikipedia.org/wiki/Amlash">Amlashi</a>, but every body calls me Sadra.</p>
         <p>I was born in Amlash at 1991/3/21. I’m living in Gorgan, about 20 years. I have educated Bachelor in Telecommunications engineering at IAUAK University. Because of my skills and job positions, I’ve decided to educate Master of&nbsp;in e-Commerce at IAUEC.</p>
