Modify domain to sadra.me

--- a/404.html
+++ b/404.html
@@ -28,11 +28,11 @@
 
 
 
-<meta property="twitter:image" content="//isapanah.com/english/assets/img/base/avatar.jpg" />
-<meta property="og:image" content="//isapanah.com/english/assets/img/base/avatar.jpg" />
+<meta property="twitter:image" content="//sadra.me//english/assets/img/base/avatar.jpg" />
+<meta property="og:image" content="//sadra.me//english/assets/img/base/avatar.jpg" />
 
 
-<meta property="og:url" content="//isapanah.com/english/404.html">
+<meta property="og:url" content="//sadra.me//english/404.html">
 <meta property="og:description" content="My name is Sadra. I’m an iOS & Android App Developer.
 ">
 <meta name="twitter:description" content="My name is Sadra. I’m an iOS & Android App Developer.
@@ -41,8 +41,8 @@
 
 
 <link rel="alternative" href="/site-map.xml" title="Sadra Isapanah Amlashi" type="application/atom+xml">
-<link rel="short icon" type="image/x-icon" href="//isapanah.com/english/assets/img/base/favicon.png">
-<link rel="stylesheet" type="text/css" href="//isapanah.com/english/assets/css/styles.css">
+<link rel="short icon" type="image/x-icon" href="//sadra.me//english/assets/img/base/favicon.png">
+<link rel="stylesheet" type="text/css" href="//sadra.me//english/assets/css/styles.css">
 
 
     <style>
@@ -93,7 +93,7 @@
             </div>
 
             <div class="err404-movie-container">
-                <p>If you want the page, just search it again. You know how to search, don't you, baby? Click on back, and return to my heart. <a href="//isapanah.com/english">Back</a></p>
+                <p>If you want the page, just search it again. You know how to search, don't you, baby? Click on back, and return to my heart. <a href="//sadra.me//english">Back</a></p>
             </div>
 
             <div  id="playBtn"></div>
@@ -128,10 +128,10 @@
 
     </script>
 
-<script  type="application/javascript" src="//isapanah.com/english/assets/js/jquery-3.2.1.min.js"></script>
-<script  type="application/javascript" src="//isapanah.com/english/assets/js/function.js"></script>
-<script  type="application/javascript" src="//isapanah.com/english/assets/js/html2canvas.min.js"></script>
-<script  type="application/javascript" src="//isapanah.com/english/assets/js/canvas2image.js"></script>
+<script  type="application/javascript" src="//sadra.me//english/assets/js/jquery-3.2.1.min.js"></script>
+<script  type="application/javascript" src="//sadra.me//english/assets/js/function.js"></script>
+<script  type="application/javascript" src="//sadra.me//english/assets/js/html2canvas.min.js"></script>
+<script  type="application/javascript" src="//sadra.me//english/assets/js/canvas2image.js"></script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5952bba56b75766c"></script>
 </body>
 </html>
